--- a/project_03.ipynb
+++ b/project_03.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><img src=\"https://github.com/FabianoManetti/dimensionality_reduction_customer_satisfaction/customer_satisfaction.jpg\" width=\"400\" height=\"400\"></center><br>\n",
+    "<center><img src=\"customer_satisfaction.jpg\" width=\"400\" height=\"400\"></center><br>\n",
     "\n",
     "It is essential for Banks to monitor their **Customers' Satisfaction** since dissatisfied customers tend to cancel their services with that institution and are likely to migrate to another bank.\n",
     "\n",
